# iosdbg

./: Cargo.toml  README.en.md  README.md  hagindex.yml
.github/workflows/: build-macos-client.yml
docs/: ci-cd.md  xdbg-remote-integration.md
docs/ui/: x64dbg-parity-baseline.md  x64dbg-regression-checklist.md  x64dbg-reuse-feasibility.md
openspec/changes/macos-menu-bar-text-readability/: proposal.md  tasks.md
openspec/changes/xdbg-remote-interface-integration/: design.md  proposal.md  tasks.md
openspec/specs/assembly-display/: spec.md
openspec/specs/bilingual-readme/: spec.md
openspec/specs/binary-loading/: spec.md
openspec/specs/breakpoint-management/: spec.md
openspec/specs/execution-control/: spec.md
openspec/specs/execution-visualization/: spec.md
openspec/specs/github-release-publish/: spec.md
openspec/specs/lldb-integration/: spec.md
openspec/specs/macos-dual-arch-build/: spec.md
openspec/specs/memory-inspection/: spec.md
openspec/specs/process-attach-debugging/: spec.md
openspec/specs/register-inspection/: spec.md
openspec/specs/ui-framework/: spec.md
openspec/specs/ui-text-contrast/: spec.md
scripts/: build_macos_client.sh  smoke_release_publish.sh  validate_ci_workflow.sh
src/: app.rs  lib.rs  main.rs
src/core/: engine.rs  events.rs  mod.rs  session.rs  types.rs
src/core/remote/: mod.rs  xdbg_adapter.rs
src/types/: mod.rs
src/ui/: assembly_view.rs  control_panel.rs  memory_viewer.rs  mod.rs  register_panel.rs  status_bar.rs
src/ui/layout/: mod.rs
tests/: attach_integration.rs  remote_integration.rs
(+29 files in other folders)
