[package]
name = "rust-lldb-visual-debugger"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock-lldb"]
mock-lldb = []
real-lldb = ["dep:lldb-sys"]

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = true }
rfd = "0.14"
lldb-sys = { version = "0.0.31", optional = true }

[dev-dependencies]
tempfile = "3"
